--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-* {
+body {
     background-color: antiquewhite;
 }
+
+/* .headBanner{
+    background-color: white;
+}
+
+.container-fluid{
+    background-color: white;
+} */
