--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,10 @@ body {
 
 .bodyClass{
     background-color: white;
-    
     display: grid;
     place-content: center;
-    width: 50%;
-    margin: 1rem;
-    padding: 1rem;
+    margin: 2rem;
+    padding: 2rem;
     box-shadow: 10px 10px 10px rgb(202, 202, 202);
     border-radius: 5px;
 }
@@ -39,6 +37,26 @@ body {
     background-color: white;
 }
 
+input{
+    border: 1px solid grey;
+    font-size: 20px;
+    height: 40px;
+    width: 200%;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 8px;
+}
+
+textarea{
+    border: 1px solid grey;
+    font-size: 20px;
+    height: 200px;
+    width: 200%;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border-radius: 8px;
+    resize: none;
+}
 
 .text-muted{
     color: gray;
